[project]
name = "iac-jenkins-assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kapis", email = "kapis90@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"iac-jenkins-assistant" = "iac_jenkins_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iac_jenkins_assistant"]
